--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,87 @@
-body{
-    background: #ccc;
+/* COMMON STYLES */
+@font-face{
+    font-family: "Cera-pro-bold";
+    src: url(../fonts/CeraPro-Bold.ttf);
 }
+
+@font-face{
+    font-family: "Cera-pro-med";
+    src: url(../fonts/CeraPro-Medium.ttf);
+}
+
+@font-face{
+    font-family: "Cera-pro-reg";
+    src: url(../fonts/CeraPro-Regular.ttf);
+}
+
+*{
+    font-family: "Cera-pro-reg";
+}
+
+.green-button{
+    background: #46A358;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+}
+
+/* -- STYLES FOR MAIN PAGE -- */
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+header{
+    display: flex;
+    width: 100%;
+    margin-top: 30px;
+
+    /* background: #acabab; */
+
+    border-bottom: 1px solid rgba(70, 163, 88, 0.2);
+}
+
+header nav{
+    display: inline-block;
+    margin: 8px auto 0 auto;
+    font-size: 0px;
+}
+nav a{
+    display: inline-block;
+    margin-right: 50px;
+    margin-bottom: 25px;
+    font-size: 16px;
+    text-decoration: none;
+    color: #3D3D3D;
+}
+nav a:last-child{
+    margin-right: 0px;
+}
+
+.logo-icon{
+    display: inline-block;
+    max-width: 150px;
+    align-self: flex-start;
+}
+
+#header-login-button{
+    display: inline-block;
+    align-self: flex-start;
+    font-size: 16px;
+    line-height: 20px;
+    padding: 9px 18px;
+    cursor: pointer;
+}
+
+.login-icon{
+    width: 20px;
+    vertical-align: bottom;
+    margin-right: 6px;
+}
+
+
+/* -- STYLES FOR REGISTRATION -- */
 .modal-window-container{
     width: 500px;
     margin: 0 auto;
@@ -67,7 +148,7 @@ form{
 .another-registration-actions-divider::before,
 .another-registration-actions-divider::after{
     content: "";
-    width: 95px;
+    width: 92px;
     border-bottom: 1px solid #EAEAEA;
 
 }
@@ -109,11 +190,6 @@ input{
     margin: 0 auto;
     margin-top: 41px;
     padding: 16px 0;
-
-    background: #46A358;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 4px;
 }
 .continue-with-button{
     display: flex;
