--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@
     border: none;
     border-radius: 5px;
 }
+.green-text{
+    color: #46A358;
+}
 
 /* -- STYLES FOR MAIN PAGE -- */
 
@@ -33,7 +36,7 @@
 }
 
 header{
-    display: flex;
+    font-size: 0;
     width: 100%;
     margin-top: 30px;
 
@@ -44,7 +47,7 @@ header{
 
 header nav{
     display: inline-block;
-    margin: 8px auto 0 auto;
+    margin: 8px 369px 0 229px;
     font-size: 0px;
 }
 nav a{
@@ -62,12 +65,12 @@ nav a:last-child{
 .logo-icon{
     display: inline-block;
     max-width: 150px;
-    align-self: flex-start;
+    vertical-align: top;
 }
 
 #header-login-button{
     display: inline-block;
-    align-self: flex-start;
+    vertical-align: top;
     font-size: 16px;
     line-height: 20px;
     padding: 9px 18px;
@@ -78,6 +81,66 @@ nav a:last-child{
     width: 20px;
     vertical-align: bottom;
     margin-right: 6px;
+}
+
+section{
+    margin-top: 12px;
+    padding-left: 43px;
+    background: rgba(245, 245, 245, 0.5);
+    font-size: 0;
+}
+
+.left-side-section{
+    display: inline-block;
+    max-width: 650px;
+    vertical-align: top;
+    margin-top: 68px;
+}
+
+.left-side-section h1{
+    color: #3D3D3D;
+    letter-spacing: 0.1rem;
+    line-height: 16px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
+
+.left-side-section h2{
+    color: #3D3D3D;
+    font-family: "Cera-pro-bold";
+    font-size: 70px;
+    line-height: 70px;
+    text-transform: uppercase;
+}
+
+.left-side-section h2 span{
+    font-size: 70px;
+    line-height: 70px;
+    font-family: "Cera-pro-bold";
+}
+
+.left-side-section p{
+    max-width: 557px;
+    color: #727272;
+    line-height: 24px;
+    margin-top: 5px;
+}
+
+#shop-now-button{
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    padding: 10px 26px;
+    margin-top: 44px;
+    letter-spacing: 1px;
+}
+
+.right-side-section{
+    display: inline-block;
+    max-width: 507px;
+}
+.right-side-section img{
+    width: 100%;
 }
 
 
