--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 /* COMMON STYLES */
+
+@font-face {
+    font-family: "Cera-pro-black";
+    src: url(../fonts/CeraPro-Black.ttf);
+}
+
 @font-face{
     font-family: "Cera-pro-bold";
     src: url(../fonts/CeraPro-Bold.ttf);
@@ -53,10 +59,14 @@ header nav{
 nav a{
     display: inline-block;
     margin-right: 50px;
-    margin-bottom: 25px;
+    padding-bottom: 25px;
     font-size: 16px;
     text-decoration: none;
     color: #3D3D3D;
+}
+nav a.active{
+    font-weight: 700;
+    border-bottom: 3px solid #46A358;
 }
 nav a:last-child{
     margin-right: 0px;
@@ -107,16 +117,17 @@ section{
 
 .left-side-section h2{
     color: #3D3D3D;
-    font-family: "Cera-pro-bold";
+    font-family: "Cera-pro-black";
     font-size: 70px;
     line-height: 70px;
     text-transform: uppercase;
 }
 
 .left-side-section h2 span{
+    display: inline-block;
     font-size: 70px;
     line-height: 70px;
-    font-family: "Cera-pro-bold";
+    font-family: "Cera-pro-black";
 }
 
 .left-side-section p{
