--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,35 @@ aside .active-cat{
     width: calc(33.333% - 30px);
 }
 .card-img{
+    position: relative;
+    display: flex;
+    flex-direction: column;
     max-height: 300px;
+    cursor: pointer;
 }
 .card-img img{
     display: block;
     margin: 0 auto;
     max-width: 100%;
     height: 100%;
+}
+.card-img::before{
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    background:#46A358;
+    opacity: 0;
+    transition: 0.5s ease;
+}
+.card-img:hover::before{
+    opacity: 1;
+}
+.card-img:hover .feature-bar{
+    opacity: 1;
 }
 .card-details{
     margin-top: 12px;
@@ -276,6 +298,63 @@ aside .active-cat{
     font-size: 18px;
     font-weight: 700;
 }
+
+/* -- FEATURE BAR FOR CARDS -- */
+
+.feature-bar{
+    position: absolute;
+    display: flex;
+    align-self: center;
+    bottom: 7px;
+    column-gap: 10px;
+    opacity: 0;
+    transition: 0.5s ease;
+}
+.feature-bar button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35px;
+    height: 35px;
+    border: none;
+    border-radius: 4px;
+    background: #FFFFFF;
+}
+.feature-bar button img{
+    width: 20px;
+    height: 20px;
+}
+
+/* -- SALE ON CARDS -- */
+
+.price-wrapper{
+    display: flex;
+    column-gap: 16px;
+}
+
+.price-wrapper .actual-price{
+    font-size: 18px;
+    line-height: 16px;
+    color: #A5A5A5;
+    text-decoration: line-through;
+}
+
+.sale-flag{
+    font-family: "Cera-pro-med";
+    width: 80px;
+    height: 30px;
+    position: absolute;
+    top: 14px;
+    font-size: 16px;
+    line-height: 16px;
+    color: #FFFFFF;
+    background: #46A358;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    
+
 
 /* -- STYLES FOR PAGINATION -- */
 
