--- a/css/style.css
+++ b/css/style.css
@@ -341,8 +341,7 @@ aside .active-cat{
 
 .sale-flag{
     font-family: "Cera-pro-med";
-    width: 80px;
-    height: 30px;
+    padding: 7px 9px;
     position: absolute;
     top: 14px;
     font-size: 16px;
