--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ nav a:last-child{
     line-height: 20px;
     padding: 9px 18px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .login-icon{
