--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@
     font-family: "Cera-pro-reg";
     src: url(../fonts/CeraPro-Regular.ttf);
 }
+:root{
+    --primary-gray-color: #3D3D3D;
+    --primary-hover-gray-color: #585858;
+    --primary-green-color: #46A358;
+}
 
 *{
     font-family: "Cera-pro-reg";
@@ -28,13 +33,17 @@ button{
     cursor: pointer;
 }
 .green-button{
-    background: #46A358;
+    background: var(--primary-green-color);
     color: #FFFFFF;
     border: none;
     border-radius: 5px;
+    transition: 0.4s ease;
+}
+.green-button:hover{
+    opacity: 0.8;
 }
 .green-text{
-    color: #46A358;
+    color: var(--primary-green-color);
 }
 
 /* -- STYLES FOR MAIN PAGE -- */
@@ -70,7 +79,47 @@ nav a{
 }
 nav a:hover{
     font-weight: 700;
-    border-bottom: 3px solid #46A358;
+    border-bottom: 3px solid var(--primary-green-color);
+}
+.header__button-wrapper{
+    display: flex;
+}
+.header__button-wrapper a{
+    align-self: flex-start;
+}
+.icon-wrapper{
+    position: relative;
+    margin-right: 30px;
+}
+.icon-wrapper .counter{
+    box-sizing: content-box;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12px;
+    height: 12px;
+    top: 2px;
+    right: -8px;
+    font-size: 10px;
+    line-height: 12;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    background: var(--primary-green-color);
+    border-radius: 50%;
+}
+.header__search-cart-buttons-wrapper {
+    display: flex;
+}
+.header__search-cart-buttons-wrapper .header-icon{
+    width: 20px;
+    height: 20px;
+    margin-top: 6px;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+.header__search-cart-buttons-wrapper .header-icon:hover{
+    opacity: 0.5;
 }
 
 /* -- STYLES FOR DROPDOWN MENU -- */
@@ -101,19 +150,24 @@ nav a:hover .nav__dropdown-menu{
 }
 .nav__dropdown-menu .item-with-dropdown{
     position: relative;
+    transition: 0.3s ease-in-out;
 }
-.nav__dropdown-menu .item-with-dropdown:hover{
+.nav__dropdown-menu .item-with-dropdown .item-with-dropdown__icon{
+    vertical-align: middle;
+    width: 8px;
+    height: 11px;
+    margin-right: 17px;
+    fill: #3D3D3D;
+    transition: 0.3s ease-in-out;
+}
+.nav__dropdown-menu li:hover{
     font-weight: 700;
     color: #FFFFFF;
     background: #1A712A;
 }
-.nav__dropdown-menu .item-with-dropdown::after{
-    content: url("../images/header/icon_dropdown_menu_arrow_right.svg");
-    margin-right: 17px;
-}
-.nav__dropdown-menu .item-with-dropdown:hover::after{
-    content: url("../images/header/icon_dropdown_menu_arrow_left.svg");
-    margin-right: 17px;
+.nav__dropdown-menu .item-with-dropdown:hover .item-with-dropdown__icon{
+    transform: rotate(180deg);
+    fill: #fff;
 }
 .nav__dropdown-menu .inner-dropdown-menu{
     visibility: hidden;
@@ -139,6 +193,7 @@ nav a:last-child{
 .logo-icon{
     display: inline-block;
     max-width: 150px;
+    max-height: 35px;
     vertical-align: top;
 }
 
@@ -149,9 +204,9 @@ nav a:last-child{
     cursor: pointer;
     text-decoration: none;
 }
-
-.login-icon{
-    width: 20px;
+.icon-login-button{
+    width: 18px;
+    height: 18px;
     vertical-align: bottom;
     margin-right: 6px;
 }
@@ -231,13 +286,7 @@ main{
     list-style-type: none;
 }
 
-.shop-section aside{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 28%;
-    background: #FBFBFB;
-}
+
 
 .shop-section .shop-section__right-side{
     max-width: 70%;
@@ -245,24 +294,92 @@ main{
 
 /* -- ASIDE -- */
 
+.shop-section aside{
+    max-width: 28%;
+    padding-top: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: #FBFBFB;
+}
+
 aside h2{
     font-size: 18px;
     line-height: 16px;
     font-weight: 700;
-    margin-top: 14px;
+    margin-top: 36px;
     margin-left: 18px;
     margin-bottom: 20px;
 }
+aside h2:first-child{
+    margin-top: 0;
+}
 aside ul li{
+    display: flex;
+    justify-content: space-between;
     margin-left: 30px;
     margin-bottom: 20px;
+    margin-right: 24px;
     font-size: 15px;
     line-height: 16px;
     cursor: pointer;
+    transition: 0.3s ease;
 }
-aside .active-cat{
-    font-family: "Cera-pro-bold";
-    color: #46A358;
+aside ul li a{
+    text-decoration: none;
+    color: var(--primary-gray-color);
+}
+aside ul li.active-cat a,
+aside ul li.active-cat span{
+    font-weight: 700;
+    color: var(--primary-green-color);
+}
+aside ul li:hover a,
+aside ul li:hover span{
+    font-weight: 700;
+}
+.aside__category-wrapper .price-range-container{
+    margin-left: 30px;
+}
+.aside__category-wrapper .price-range-container .range{
+    position: relative;
+    max-width: 210px;
+    height: 5px;
+    margin-top: 29px;
+    border-radius: 4px;
+    background: linear-gradient(to right, var(--primary-green-color) 70%, #D7EADB 30%);
+}
+.range .circle{
+    position: absolute;
+    box-sizing: content-box;
+    width: 12px;
+    height: 12px;
+    top: -7px;
+    background: var(--primary-green-color);
+    border: 3px solid #FFFFFF;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.range .max-range{
+    right: 24%;
+}
+.price-range-container .price{
+    margin: 21px 0 16px 0;
+    font-size: 15px;
+    line-height: 16px;
+}
+.price-range-container .price span{
+    font-weight: 700;
+}
+.price-range-container button{
+    padding: 8px 26px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    transition: 0.4s ease;
+}
+.price-range-container button:hover{
+    opacity: 0.8;
 }
 .shop-section aside img{
     display: block;
@@ -282,6 +399,7 @@ aside .active-cat{
     align-items: center;
 }
 .sort-button{
+    position: relative;
     display: block;
     background: none;
     border: none;
@@ -291,17 +409,37 @@ aside .active-cat{
 .sort-button:last-child{
     margin-right: 0;
 }
-.sort-panel .active-sort{
+.sort-panel nav .active-sort::after{
+    content: '';
+    left: 0;
+    bottom: -7px;
+    width: 100%;
+    position: absolute;
+    border-bottom: 2px solid var(--primary-green-color);
+}
+.sort-panel nav .active-sort{
     font-weight: 700;
-    color: #46A358;
-    border-bottom: 2px solid #46A358;
+    color: var(--primary-green-color);
+}
+.sort-panel nav .sort-button:hover{
+    font-weight: 700;
+    color: var(--primary-hover-gray-color);
+}
+.sort-panel nav .active-sort:hover{
+    color: var(--primary-green-color);
+}
+.sort-panel__sort-wrapper .sort-button:hover{
+    font-weight: 700;
+    color: var(--primary-hover-gray-color);
 }
 .sort-panel p{
     font-size: 15px;
     line-height: 16px;
     margin-right: 8px;
 }
-.sort-panel button img{
+.sort-panel .sort-button__icon{
+    width: 12px;
+    height: 8px;
     vertical-align: middle;
 }
 
@@ -338,7 +476,7 @@ aside .active-cat{
     top: 0;
     left: 0;
     display: block;
-    background:#46A358;
+    background:var(--primary-green-color);
     opacity: 0;
     transition: 0.5s ease;
 }
@@ -386,6 +524,15 @@ aside .active-cat{
     width: 20px;
     height: 20px;
 }
+.feature-bar .feature-bar__icon{
+    display: block;
+    width: 20px;
+    height: 20px;
+    fill: #3D3D3D;
+}
+.feature-bar button:hover .feature-bar__icon{
+    fill: var(--primary-green-color);
+}
 
 /* -- SALE ON CARDS -- */
 
@@ -409,7 +556,7 @@ aside .active-cat{
     font-size: 16px;
     line-height: 16px;
     color: #FFFFFF;
-    background: #46A358;
+    background: var(--primary-green-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -442,15 +589,38 @@ aside .active-cat{
     border-radius: 4px;
 
     cursor: pointer;
+    transition: 0.4s ease;
 }
-.pagination li:last-child{
-    margin-right: 0;
-}
+
 .pagination .active-pag{
     font-weight: 700;
     color: #FFFFFF;
-    background: #46A358;
-    border-color: #46A358;
+    background: var(--primary-green-color);
+    border-color: var(--primary-green-color);
+}
+.pagination .icon-next-page{
+    width: 8px;
+    height: 12px;
+    stroke: var(--primary-gray-color);
+    stroke-width: 1.5;
+    transition: 0.4s ease;
+}
+.pagination li:hover{
+    font-weight: 700;
+    color: #FFFFFF;
+    background: #c7c7c7;
+    border-color: #c7c7c7;
+}
+.pagination li.active-pag:hover{
+    background: var(--primary-green-color);
+    opacity: 0.8;
+}
+.pagination li:hover .icon-next-page{
+    stroke: #FFFFFF;
+    stroke-width: 2.5;
+}
+.pagination li:last-child{
+    margin-right: 0;
 }
 
 /* -- INFO-BLOG SECTION -- */
@@ -508,17 +678,26 @@ aside .active-cat{
     margin-top: 8px;
 }
 .information-section .info-card button{
-    display: block;
+    display: flex;
+    align-items: center;
     margin-left: auto;
     margin-top: 24px;
-    padding: 11px 28px;
+    padding: 11px 26px;
+    transition: 0.4s ease;
+}
+.info-card button .icon-find-more-arrow{
+    stroke: #FFFFFF;
+    width: 18px;
+    height: 18px;
+    margin-left: 6px;
+    transition: 0.4s ease;
 }
 
-.information-section .info-card button::after{
-    content: url(/images/icon-arrow-right-white.svg);
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 6px;
+.information-section .info-card button:hover{
+    opacity: 0.8;
+}
+.information-section .info-card button:hover .icon-find-more-arrow{
+    opacity: 0.8;
 }
 
 /* -- BLOG POSTS SECTION -- */
@@ -586,6 +765,8 @@ aside .active-cat{
 }
 
 .blog-card-description .blog-card-descritpion__button{
+    display: flex;
+    align-items: center;
     font-family: "Cera-pro-med";
     margin-top: 9px;
     border: none;
@@ -594,8 +775,20 @@ aside .active-cat{
     line-height: 16px;
 }
 
-.blog-card-description button.active{
-    color: #46A358;
+.blog-card-descritpion__button .icon-read-more-arrow{
+    width: 12px;
+    height: 11px;
+    fill: var(--primary-gray-color);
+    margin-left: 5px;
+}
+.blog-card-descritpion__button:hover {
+    color: var(--primary-green-color);
+}
+.blog-card-descritpion__button:hover .icon-read-more-arrow{
+    width: 12px;
+    height: 11px;
+    fill: var(--primary-green-color);
+    margin-left: 5px;
 }
 
 .blog-card-description .blog-card-descritpion__button img{
@@ -658,14 +851,13 @@ footer h2{
     background-size: contain;
 }
 .footer-newsletter__card-wrapper .card-1 .bg-card-img{
-    background-image: url(../images/footer/footer-newsletter-img-1.svg);
+    background-image: url(../images/footer/footer-newsletter-img-1.png);
 }
 .footer-newsletter__card-wrapper .card-2 .bg-card-img{
-    background-image: url(../images/footer/footer-newsletter-img-2.svg);
+    background-image: url(../images/footer/footer-newsletter-img-2.png);
 }
 .footer-newsletter__card-wrapper .card-3 .bg-card-img{
-    
-    background-image: url(../images/footer/footer-newsletter-img-3.svg);
+    background-image: url(../images/footer/footer-newsletter-img-3.png);
 }
 
 .footer-newsletter__form-block{
@@ -734,14 +926,18 @@ footer h2{
     align-items: center;
     column-gap: 12px;
 }
-.footer-contacts .footer-contacts__item img{
-    width: 20px;
+.footer-contacts .footer-contacts__item .footer-contacts__item__icon{
+    min-width: 20px;
     height: 20px;
+    stroke: var(--primary-green-color);
 }
 .footer-contacts .footer-contacts__item a{
     color: #3D3D3D;
     text-decoration: none;
     line-height: 22px;
+}
+.footer-contacts .footer-contacts__item:hover a{
+    font-weight: 700;
 }
 
 /* -- FOOTER DETAILS SECTION -- */
@@ -776,6 +972,10 @@ footer h2{
     margin-bottom: 12px;
     cursor: pointer;
 }
+.footer-details__navigation ul li:hover{
+    font-weight: 700;
+    color: var(--primary-hover-gray-color);
+}
 .footer-details__navigation ul li:last-child{
     margin-bottom: 0;
 }
@@ -799,10 +999,19 @@ footer h2{
     justify-content: center;
     border: 1px solid #46A35833;
     border-radius: 4px;
+    transition: 0.4s ease;
 }
-.footer-details__social-media .media-icon-container img{
+.footer-details__social-media .media-icon-container .footer-social-icon{
     max-width: 18px;
     height: 16px;
+    transition: 0.4s ease;
+}
+.footer-details__social-media .media-icon-container:hover{
+    opacity: 0.8;
+    border-color: var(--primary-green-color);
+}
+.footer-details__social-media .media-icon-container:hover .footer-social-icon{
+    opacity: 0.8;
 }
 .footer-details__social-media__icons{
     display: flex;
